--- a/style.css
+++ b/style.css
@@ -22,5 +22,10 @@ outline: 0px;
 
 .mainSection{
 border-radius:240px 240px 0px 0px ;
-background-image: linear-gradient(#f8f9fa,white) ;
+background-image: linear-gradient(#fff4f6,white) ;
+}
+
+.errorSection{
+    border-radius:240px 240px 0px 0px ;
+background-image: linear-gradient(#e1e6eb,white) ;
 }
