--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ background-image: linear-gradient(#fff4f6,white) ;
     border-radius:240px 240px 0px 0px ;
 background-image: linear-gradient(#e1e6eb,white) ;
 }
+.noResultSection{
+    border-radius:240px 240px 0px 0px ;
+background-image: linear-gradient(#8ec6ff,white) ;
+/* display: none; */
+}
