detail section updated

--- a/style.css
+++ b/style.css
@@ -31,6 +31,5 @@ background-image: linear-gradient(#e1e6eb,white) ;
 }
 .noResultSection{
     border-radius:240px 240px 0px 0px ;
-background-image: linear-gradient(#8ec6ff,white) ;
-/* display: none; */
+background-image: linear-gradient(#ccccbb,white) ;
 }
