--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ border-radius: 0px 0px 240px 240px;
 #searchInput,#searchButton{
      border-radius: 50px ; 
 }
+/* spinner  */
+#spinner{
+display:none
+}
 
 
 .mainSection{
